fix search card: icona gruppi, stile overflow, cabio limite cluster a zoom 18 > 23

--- a/scss/maps.scss
+++ b/scss/maps.scss
@@ -35,8 +35,9 @@
             display: block;
             min-width: 100%;
             overflow: hidden;
+            height: 47px;
             span {
-                display: inline-block;
+                display: inline;
                 padding-right: 10px;
                 font-weight: 300;
                 font-size: 1em;
